2020-11-26 belangeo <belangeo@gmail.com>

    * Fixed segmentation fault in PyoMatrixObject.read() method.

2020-11-25 belangeo <belangeo@gmail.com>

    * Added a div method to PyoTableObject.

2020-11-25 belangeo <belangeo@gmail.com>

    * Added a shape argument to PyoTableObject.fadein and  PyoTableObject.fadeout methods.

2020-11-23 belangeo <belangeo@gmail.com>

    * Added a level argument to PyoTableObject.normalize method.

2020-11-12 belangeo <belangeo@gmail.com>

    * Added PyoObjectBase.getStopDelay() method (mainly for unit testing).

2020-08-28 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.3.

2020-08-28 belangeo <belangeo@gmail.com>

    * Fixed missing lib dependency links on MacOS.

2020-08-17 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.2.

2020-08-02 belangeo <belangeo@gmail.com>

    * Added new object: MML, Music Macro Language evaluator.

2020-06-27 belangeo <belangeo@gmail.com>

    * Fixed segfault in reducePoints function.

2020-06-27 belangeo <belangeo@gmail.com>

    * Fixed Linseg when time difference between two points is less than 1 sample.

2020-02-10 belangeo <belangeo@gmail.com>

    * Added new object: TriangleTable.

2020-01-20 belangeo <belangeo@gmail.com>

    * Added new object: IFFTMatrix, Inverse Fast Fourier Transform with a PyoMatrixObject as input.

2020-01-07 belangeo <belangeo@gmail.com>

    * PVBuffer's length attribute can now be changed dynamically.

2019-11-27 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.1.

2019-11-24 belangeo <belangeo@gmail.com>

    * Added beatToDur(beat, bpm) function.

2019-11-15 belangeo <belangeo@gmail.com>

    * Added examples about how to use OSC protocol with pyo.

2019-11-12 belangeo <belangeo@gmail.com>

    * Added utilities examples.

2019-11-11 belangeo <belangeo@gmail.com>

    * Added events examples.

2019-11-05 belangeo <belangeo@gmail.com>

    * Added the first version of the Events framework.

2019-10-22 belangeo <belangeo@gmail.com>
