@@ -1,3 +1,7 @@
+2020-11-27 belangeo <belangeo@gmail.com>
+
+    * Added a level argument to PyoMatrixObject.normalize() method.
+
 2020-11-26 belangeo <belangeo@gmail.com>
 
     * Fixed segmentation fault in PyoMatrixObject.read() method.
@@ -8,11 +12,11 @@
 
 2020-11-25 belangeo <belangeo@gmail.com>
 
-    * Added a shape argument to PyoTableObject.fadein and  PyoTableObject.fadeout methods.
+    * Added a shape argument to PyoTableObject.fadein() and PyoTableObject.fadeout() methods.
 
 2020-11-23 belangeo <belangeo@gmail.com>
 
-    * Added a level argument to PyoTableObject.normalize method.
+    * Added a level argument to PyoTableObject.normalize() method.
 
 2020-11-12 belangeo <belangeo@gmail.com>
 
